deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ktni-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: ktni-actions
        image: registry.digitalocean.com/olsen/ktni-actions
        ports:
        - containerPort: 80
