ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ktni-actions
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: "app.motoren.site"
    http:
      paths:
      - pathType: Prefix
        path: "/ktni"
        backend:
          service: 
            name: ktni-actions
            port:
              number: 80
